--- a/Index.html
+++ b/Index.html
@@ -16,3 +16,18 @@
 					<input type="text" name="first_name_field">
 				</label>
 			</div>
+			<div>
+				<label>Last Name:
+					<input type="text" name="last_name_field">
+				</label>
+			</div>
+			<div>
+				<label>Phone Number
+					<input type="text" name="phone_field">
+				</label>
+			</div>
+			<div>
+				<label>Email Address:
+					<input type="text" name="email_field">
+				</label>
+			</div>
