Added the checkboxes

--- a/Index.html
+++ b/Index.html
@@ -50,3 +50,37 @@
 					</select>
 				</label>
 			</div>
+		</fieldset>
+
+		<h2>My Availability</h2>
+		<fieldset>
+			<label>Days Available:</label>
+			<div>
+				<input type="checkbox" name="availble_field[]" value="Sunday">
+				<label>Sunday</label>
+			</div>
+			<div>
+				<input type="checkbox" name="availble_field[]" value="Monday">
+				<label>Monday</label>
+			</div>
+			<div>
+				<input type="checkbox" name="availble_field[]" value="Tuesday">
+				<label>Tuesday</label>
+			</div>
+			<div>
+				<input type="checkbox" name="availble_field[]" value="Wednesday">
+				<label>Wednesday</label>
+			</div>
+			<div>
+				<input type="checkbox" name="availble_field[]" value="Thursday">
+				<label>Thursday</label>
+			</div>
+			<div>
+				<input type="checkbox" name="availble_field[]" value="Friday">
+				<label>Friday</label>
+			</div>
+			<div>
+				<input type="checkbox" name="availble_field[]" value="Saturday">
+				<label>Saturday</label>
+			</div>
+
