completed the form by adding send me

--- a/Index.html
+++ b/Index.html
@@ -83,4 +83,15 @@
 				<input type="checkbox" name="availble_field[]" value="Saturday">
 				<label>Saturday</label>
 			</div>
+			<div>
+				<label>Any Comments? </label>
+				<textarea name="comments_field" rows="12" cols="40"></textarea>
+			</div>
+		</fieldset>
 
+				<input type="submit" value="Send Me">
+				<input type="hidden" name="hidden_field" value="Oluwaseun Ogunsanya">
+			</form>
+		</body>
+		</html>
+		
