Included the hidden field

--- a/Index.html
+++ b/Index.html
@@ -90,8 +90,8 @@
 		</fieldset>
 
 				<input type="submit" value="Send Me">
-				<input type="hidden" name="hidden_field" value="Oluwaseun Ogunsanya">
+				<input type="hidden" name="hidden_field" value="oogunsanya">
 			</form>
 		</body>
 		</html>
-		
+
